fix mail address

--- a/src/pages/camper/blue.astro
+++ b/src/pages/camper/blue.astro
@@ -18,7 +18,7 @@ import camper from '../../assets/blue/camper_wald.jpg'
 		<h1>Der praktische Camper für die ganze Familie</h1>
 		<h2>Ein Einblick in unser zweites Zuhause für Unterwegs</h2>
 		<div class="ctas">
-			<a class="btn" href="mailto:halloe@stammbrueder.de?subject=Blue ausleihen">Camper ausleihen</a>
+			<a class="btn" href="mailto:hallo@stammbrueder.de?subject=Blue ausleihen">Camper ausleihen</a>
 		</div>
 	</Hero>
 	<section class="tiles wrapper">
