--- a/src/pages/camperausbau.astro
+++ b/src/pages/camperausbau.astro
@@ -19,7 +19,7 @@ flexibleHeader="true">
 		<h1>Wir planen und fertigen individuelle Camper</h1>
 		<h2>Ein zweites Zuhause genau nach deinen Vorstellungen und Bedürfnissen.</h2>
 		<div class="ctas">
-			<a class="btn" href="mailto:halloe@stammbrueder.de?subject=Camperausbau">Gemeinsam ausbauen</a>
+			<a class="btn" href="mailto:hallo@stammbrueder.de?subject=Camperausbau">Gemeinsam ausbauen</a>
 		</div>
 	</Hero>
 	<section class="full projekte">
