--- a/src/pages/tische.astro
+++ b/src/pages/tische.astro
@@ -24,7 +24,7 @@ let images = (await Astro.glob('../assets/gallery/tische/*.jpeg')).map(x => x.de
 		<h1>Wir planen und fertigen Massivholztische nach Maß</h1>
 		<h2>Handgefertigt von der Tischplatte bis zum Gestell.</h2>
 		<div class="ctas">
-			<a class="btn" href="mailto:halloe@stammbrueder.de?subject=Tische">Indivuellen Tisch anfragen</a>
+			<a class="btn" href="mailto:hallo@stammbrueder.de?subject=Tische">Indivuellen Tisch anfragen</a>
 		</div>
 	</Hero>
 	<section class="full projekte">
